@@ -31,6 +31,7 @@ Version 0.3
 		GetRotation();
 		GetNumAnnots();
 	Use Exceptions now instead of error codes;
+	Removed Init from PdfOutputDevice
 	
 Version 0.2
 	Improved Documentation;
